# loong-veloxa

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  README.md  bench_allocators.cc  bench_containers.cc  bench_css_parser.cc  bench_css_property_lookup.cc  bench_css_tokenizer.cc  bench_drawtext.cc  bench_hash_map.cc  bench_imagecache.cc  bench_layout_buildtree.cc  bench_layout_flex.cc  bench_render_record.cc  bench_render_replay.cc  bench_strings.cc  css_corpus.h  layout_corpus.h
benchmarks/baseline/: README.md  bench_css_parser.json  bench_css_property_lookup.json  bench_css_tokenizer.json  bench_drawtext.json  bench_imagecache.json  bench_layout_buildtree.json  bench_layout_flex.json  bench_render_record.json  bench_render_replay.json
examples/: CMakeLists.txt  hello.cc  hello_devtool.cc  hello_sdl2.cc
tests/: CMakeLists.txt  test_pixel_utils.h
tests/api/: api_integration_test.cc  api_test.cc  console_api_test.cc  devtool_api_test.cc  devtool_attach_api_test.cc  devtool_redaction_policy_test.cc  perf_hooks_api_test.cc
tests/core/: application_devtool_test.cc  application_integration_test.cc  application_test.cc  transition_integration_test.cc  update_integration_test.cc  update_manager_test.cc
tests/core/css/: enum_serialization_test.cc  integration_test.cc  parser_test.cc  property_test.cc  selector_matcher_test.cc  style_resolver_test.cc  tokenizer_test.cc  transition_parse_test.cc  transition_test.cc
tests/core/dom/: document_test.cc  element_test.cc  node_test.cc  serializer_test.cc  tag_test.cc
tests/core/event/: event_dispatcher_test.cc  event_manager_test.cc  event_types_test.cc  hit_test_test.cc  integration_test.cc
tests/core/html/: inline_style_test.cc  integration_test.cc  parser_test.cc  tokenizer_test.cc
tests/core/image/: image_cache_test.cc  image_decoder_test.cc
tests/core/layout/: block_layout_test.cc  flex_layout_test.cc  inline_position_test.cc  integration_test.cc  layout_box_test.cc  layout_utils_test.cc  line_box_test.cc  margin_collapse_test.cc  text_shaper_test.cc  tree_builder_test.cc
tests/core/render/: border_radius_test.cc  integration_test.cc  paint_command_test.cc  renderer_test.cc
tests/devtool/: CMakeLists.txt  input_dispatch_splitter_test.cc
tests/devtool/console/: CMakeLists.txt  console_bindings_test.cc  console_engine_test.cc
tests/devtool/hot_reload/: CMakeLists.txt  file_watcher_test.cc  hot_reload_manager_test.cc  security_test.cc
tests/devtool/inspector/: CMakeLists.txt  inspector_data_test.cc  inspector_overlay_test.cc
tests/devtool/overlay/: CMakeLists.txt  perf_overlay_attach_test.cc  perf_overlay_test.cc
tests/devtool/resources/: CMakeLists.txt  inspector_panel_smoke_test.cc  inspector_resources_test.cc
tests/fixtures/wpt/: README.md
tests/foundation/: integration_test.cc
tests/foundation/base/: assert_test.cc  span_test.cc  status_test.cc  types_test.cc
tests/foundation/containers/: hash_map_test.cc  intrusive_list_test.cc  small_vector_test.cc  vector_test.cc
tests/foundation/log/: log_test.cc
tests/foundation/memory/: arena_allocator_test.cc  malloc_allocator_test.cc  pool_allocator_test.cc
tests/foundation/strings/: interned_string_test.cc  string_test.cc  string_view_test.cc  utf_test.cc
tests/graphics/: drawtext_shape_cache_test.cc  integration_test.cc  pixel_blend_test.cc  software_canvas_test.cc  software_path_test.cc  types_test.cc
tests/integration/: devtool_console_dogfood_smoke_test.cc  devtool_dogfood_smoke_test.cc  wpt_layout_test.cc
tests/platform/: event_loop_test.cc  memory_surface_test.cc  sdl2_event_loop_test.cc  sdl2_input_translate_test.cc  sdl2_window_surface_test.cc
tests/script/: devtool_bindings_test.cc  dom_bindings_test.cc  quickjs_engine_test.cc
tests/smoke/: devtool_a14_link_closure.cmake
tests/text/: font_manager_test.cc  freetype_shaper_test.cc  glyph_cache_test.cc  shape_cache_test.cc
veloxa/api/: CMakeLists.txt  veloxa_api.cc  veloxa_api.h  version.h.in
veloxa/core/: CMakeLists.txt  application.cc  application.h  update_manager.cc  update_manager.h
veloxa/core/css/: computed_style.h  css_value.h  enum_serialization.cc  enum_serialization.h  enums.h  parser.cc  parser.h  property.cc  property.h  selector.h  selector_matcher.cc  selector_matcher.h  style_resolver.cc  style_resolver.h  tokenizer.cc  tokenizer.h  transition.cc  transition.h
veloxa/core/dom/: attribute.h  comment.h  document.h  element.cc  element.h  node.cc  node.h  serializer.cc  serializer.h  tag.cc  tag.h  text.h
veloxa/core/event/: event_dispatcher.cc  event_dispatcher.h  event_manager.cc  event_manager.h  event_types.h  hit_test.cc  hit_test.h
veloxa/core/html/: parser.cc  parser.h  token.h  tokenizer.cc  tokenizer.h
veloxa/core/image/: image_cache.cc  image_cache.h  image_decoder.cc  image_decoder.h
veloxa/core/layout/: flex_layout.cc  flex_layout.h  layout_box.cc  layout_box.h  layout_engine.cc  layout_engine.h  layout_utils.cc  layout_utils.h  line_box.h  margin_collapse.h  text_shaper.cc  text_shaper.h
veloxa/core/render/: paint_command.h  render_utils.h  renderer.cc  renderer.h
veloxa/devtool/: CMakeLists.txt  input_dispatch_splitter.cc  input_dispatch_splitter.h
veloxa/devtool/console/: CMakeLists.txt  console_bindings.cc  console_bindings.h  console_engine.cc  console_engine.h
veloxa/devtool/hot_reload/: file_watcher.cc  file_watcher.h  file_watcher_inotify.cc  file_watcher_inotify.h  hot_reload_manager.cc  hot_reload_manager.h
veloxa/devtool/inspector/: CMakeLists.txt  inspector_data.cc  (+3 more)
veloxa/foundation/: CMakeLists.txt
veloxa/graphics/: CMakeLists.txt  brush.h  canvas.h  image.cc  image.h  path.h  types.h
veloxa/platform/: CMakeLists.txt  event_loop.h  surface.h
veloxa/script/: CMakeLists.txt  dom_bindings.cc  dom_bindings.h  quickjs_engine.cc  quickjs_engine.h
veloxa/text/: CMakeLists.txt  font_handle.h  font_manager.cc  font_manager.h  freetype_shaper.cc  freetype_shaper.h  glyph_cache.cc  glyph_cache.h  hb_buffer_holder.cc  hb_buffer_holder.h  shape_cache.cc  shape_cache.h
(+260 files in other folders)
